# coretexdb

./: .gitignore  1.txt  12.txt  2.txt  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  VERSIONS.md  build.rs  setup.py
.cargo/: config.toml
.github/codeql/: codeql-config.yml
.github/workflows/: Ci.yaml  build.yml  docker.yml  python.yml  release.yml  rust.yml  security.yml
benches/: vector_index.rs
config/: cortex_config.yaml  model_config.yaml  robot_config.yaml
core/: __init__.py  cortex_client.py  data_loader.py  embedding_service.py  memory_manager.py
examples/: distributed_test.rs  grpc_test.rs
llm/: __init__.py  decision_engine.py  prompt_templates.py  task_planner.py
python/: MANIFEST.in  README.md  pyproject.toml  setup.py  test_imports.py
python/coretexdb/: __init__.py  client.py  grpc_client.py  version.py
python/coretexdb/integrations/: __init__.py  huggingface.py  langchain.py  openai.py
python/cortexdb/: client.py  core.py  version.py
python/cortexdb/protocol/: __init__.py
python/examples/: README.md  basic_usage.py
rag/: __init__.py  langchain_store.py  pipeline.py  retriever.py
ros2_integration/: __init__.py  memory_node.py  query_service.py  sensor_subscriber.py
scripts/: benchmark.py  check_project_name.sh  deploy_edge.sh  migrate_data.py  performance_test.rs  simple_performance_test.rs
src/: coretex_backup.rs  coretex_bio.rs  coretex_bm25.rs  coretex_bm25_tests.rs  coretex_cdc.rs  coretex_edge.rs  coretex_embedding_tests.rs  coretex_failover.rs  coretex_graph.rs  coretex_incremental.rs  coretex_monitoring_v2.rs  coretex_onnx.rs  coretex_permissions.rs  coretex_persistence.rs  coretex_python.rs  coretex_security_tests.rs  coretex_simd.rs  coretex_tantivy.rs.bak  coretex_timeseries.rs  coretex_tracing.rs  coretex_transaction.rs  coretex_transaction_tests.rs  coretex_websocket.rs  lib.rs  main.rs  tests_integration.rs
src/coretex_ann/: mod.rs
src/coretex_api/: mod.rs
src/coretex_api/graphql/: mod.rs
src/coretex_api/rest/: mod.rs
src/coretex_auth/: mod.rs
src/coretex_cli/: mod.rs
src/coretex_compression/: mod.rs
src/coretex_core/: mod.rs  types.rs
src/coretex_distributed/: mod.rs
src/coretex_document/: mod.rs  parser.rs  vector.rs
src/coretex_embedding/: audio_embedding.rs  embedding_router.rs  image_embedding.rs  mod.rs  pointcloud_embedding.rs  streaming.rs  text_embedding.rs  video_embedding.rs
src/coretex_export/: mod.rs
src/coretex_gis/: mod.rs
src/coretex_grpc/: coretex.proto  coretex_service.rs  mod.rs  server.rs
src/coretex_hybrid/: document.rs  fusion.rs  mod.rs  query.rs  retriever.rs
src/coretex_index/: mod.rs  tests.rs
src/coretex_lakehouse/: lakehouse.rs  mod.rs  policy.rs  storage.rs  tier.rs
src/coretex_monitoring/: mod.rs
src/coretex_query/: mod.rs
src/coretex_rerank/: coarse_ranker.rs  fine_ranker.rs  mod.rs  pipeline.rs
src/coretex_search/: bm25.rs  mod.rs
src/coretex_security/: acl.rs  kms.rs  mod.rs  network.rs  validation.rs
src/coretex_sql/: mod.rs
src/coretex_storage/: mod.rs  tests.rs
src/coretex_timeseries/: mod.rs
src/coretex_utils/: backup.rs  cache.rs  cluster.rs  mod.rs  monitoring.rs  transaction.rs  wal.rs
src/cortex_api/: mod.rs
src/cortex_api/grpc/: generated.rs  mod.rs  server.rs
src/cortex_api/grpc/proto/: cortexdb.proto
src/cortex_api/python/: client.rs  mod.rs  types.rs  utils.rs
src/cortex_api/rest/: handlers.rs  middleware.rs  mod.rs  routes.rs  server.rs
src/cortex_backup/: backup.rs  mod.rs  replication.rs  restore.rs
src/cortex_cli/: commands.rs  mod.rs  parser.rs  utils.rs
src/cortex_core/: config.rs  error.rs  mod.rs  schema.rs  types.rs
src/cortex_distributed/: cluster.rs  coordinator.rs  metadata.rs  mod.rs  sharding.rs
src/cortex_index/: brute_force.rs  manager.rs  mod.rs  scalar.rs  vector.rs
src/cortex_monitor/: dashboard.rs  health.rs  metrics.rs  mod.rs
src/cortex_perf/: mod.rs
src/cortex_query/: builder.rs  executor.rs  mod.rs  optimizer.rs  planner.rs
src/cortex_security/: auth.rs  mod.rs  permission.rs  token.rs
src/cortex_storage/: engine.rs  memory.rs  mod.rs  persistent.rs
src/cortex_storage/cdb/: compression.rs  encryption.rs  format.rs  manifest.rs  mod.rs
src/cortex_utils/: cache.rs  id_generator.rs  logging.rs  metrics.rs  mod.rs  telemetry.rs
tests/: test_coretex_client.py  test_rag_pipeline.py  test_ros2_node.py
