[package]
name = "coretexdb"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A multimodal vector database for AI applications"
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/yourusername/coretexdb"
repository = "https://github.com/yourusername/coretexdb"
keywords = ["vector-database", "ai", "embedding", "similarity-search"]
categories = ["database", "science", "machine-learning"]

[workspace]

[lib]
name = "coretexdb"
path = "src/lib.rs"

[[bin]]
name = "coretex"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]
full = ["dep:rocksdb", "compression", "metrics"]
compression = ["dep:flate2", "dep:snap"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Web框架
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "compression-full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 数据库存储
rocksdb = { version = "0.20", features = ["snappy", "lz4", "zstd"], optional = true }

# 向量计算
ndarray = "0.15"
rand = "0.8"
rayon = "1.5"

# 并发和数据结构
dashmap = "5.0"
crossbeam = "0.8"
parking_lot = "0.12"

# 实用工具
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
regex = "1.5"

# 配置管理
config = "0.13"
toml = "0.7"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# 压缩
flate2 = { version = "1.0", optional = true }
snap = { version = "1.0", optional = true }

# 加密
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
hex = "0.4"

# ONNX推理
# ort = { version = "1.16", default-features = false, features = ["cuda", "tensorrt"] }

# 监控指标
metrics = { version = "0.21", optional = true }
metrics-exporter-prometheus = { version = "0.12", optional = true }

# Python绑定
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py38"], optional = true }

# gRPC
tonic = "0.10"
prost = "0.11"

# 向量索引（使用自定义 HNSWIndex 实现）

# TLS/SSL
rustls = "0.21"
hyper = { version = "0.14", features = ["full"] }
http-body = "0.4"

# CPU Features
cpufeatures = "0.2"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# 全文搜索
# tantivy = "0.22"

[dev-dependencies]
tempfile = "3.0"
rstest = "0.16"
reqwest = "0.11"
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'