[project]
name = "cortexdb"
version = "0.1.0"
description = "CortexDB Python SDK - A multimodal vector database for AI applications"
readme = "README.md"
authors = [
    { name = "CortexDB Team", email = "team@cortexdb.io" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "pydantic>=2.0.0",
    "tqdm>=4.60.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=0.900",
    "flake8>=4.0.0"
]
langchain = [
    "langchain>=0.1.0"
]
huggingface = [
    "transformers>=4.0.0",
    "sentence-transformers>=2.0.0"
]
openai = [
    "openai>=1.0.0"
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | tests
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
known_third_party = ["numpy", "requests", "pydantic", "tqdm", "typing_extensions"]
known_first_party = ["cortexdb"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_variables = true
warn_unreachable = true
exclude = ["tests", "build", "dist"]
